enable native compile with JDK 24